# team11

./: .replit  QWEN.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  vercel.json  vite.config.ts
api/: index.py  requirements.txt
backend/: .env.example  README.md  SUMMARY.md  celery_worker.py  check_users.py  create_fake_data.py  create_test_user.py  docker-compose.yml  requirements.txt  test_endpoints.py  test_frontend_integration.py  test_login.py  verify_data.py
backend/app/: init_db.py  main.py
backend/app/api/: ai_assistant.py  ai_image_generator.py  auth.py  customers.py  dashboard.py  digital_presence.py  messaging.py  referrals.py  social.py
backend/app/core/: celery_app.py  security.py  security_utils.py
backend/app/database/: database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/tests/: test_main.py
docs/: ai-marketing-assistant-guide.md  cloud-database-setup.md  vercel-backend-cors.md  vercel-deployment.md
src/: App.tsx  config.ts  index.css
src/components/: CustomerDetailPage.tsx  CustomersPage.tsx  DashboardScreen.tsx  DigitalPresenceBuilder.tsx  LoginScreen.tsx  MarketingAssistant.tsx  Navigation.tsx  ProfileSetupScreen.tsx  ReferralDashboard.tsx  UserProfilePage.tsx
src/components/__tests__/: MarketingAssistant.test.tsx
src/services/: api.ts
src/supabase/functions/server/: index.tsx  kv_store.tsx
src/utils/supabase/: info.tsx
